# xproxypool-gateway

./: .env  .gitignore  Dockerfile  LICENSE  README.en.md  README.md  docker-compose.yml  pyproject.toml  sources.yml
mcp_server/: README.md  pyproject.toml
mcp_server/xproxypool_mcp/: __init__.py  server.py
src/: main.py
src/gateway/: __init__.py  http_proxy.py  main.py  pool.py  rotator.py  socks5.py
src/ip2region/: searcher.py  util.py
src/proxy_pool/api/: routes.py
src/proxy_pool/core/: scheduler.py  storage.py  validator.py
src/proxy_pool/fetchers/: __init__.py  base.py  domestic.py  international.py
src/proxy_pool/schemas/: proxy.py
src/proxy_pool/tests/: run_tests.py
src/proxy_pool/utils/: config.py  ip_region.py  logger.py  sources.py
test/: bench.py  smoke.py
